[gd_scene load_steps=16 format=3 uid="uid://b26a2c78hthis"]

[ext_resource type="Script" uid="uid://de0pp0u6sy8uk" path="res://Scripts/arrow_head.gd" id="1_kq400"]
[ext_resource type="Texture2D" uid="uid://258qrh4j4lcs" path="res://Sprites/Jump_Snake_Eating_Self.png" id="2_j3byl"]
[ext_resource type="Texture2D" uid="uid://ci8h44johc440" path="res://Sprites/SnakeIdle.png" id="2_kq400"]
[ext_resource type="Texture2D" uid="uid://yhstf57t165s" path="res://Sprites/Long_snake_final_1.png" id="3_0t1i2"]
[ext_resource type="Texture2D" uid="uid://coaya2s4dyj3g" path="res://Sprites/Long_snake_final_2.png" id="4_kigm6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kq400"]
size = Vector2(68, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4xi8"]
atlas = ExtResource("2_j3byl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d1mn"]
atlas = ExtResource("2_j3byl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21fs0"]
atlas = ExtResource("2_j3byl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swbir"]
atlas = ExtResource("2_j3byl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t1i2"]
atlas = ExtResource("2_kq400")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kigm6"]
atlas = ExtResource("2_kq400")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j3byl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4xi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d1mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21fs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swbir")
}],
"loop": true,
"name": &"Jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t1i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kigm6")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0t1i2")
}, {
"duration": 1.0,
"texture": ExtResource("4_kigm6")
}],
"loop": true,
"name": &"slither",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j3byl"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k4xi8"]
radius = 32.0156

[node name="arrowHead" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_kq400")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_kq400")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j3byl")
animation = &"Jump"
autoplay = "default"
frame_progress = 0.254185

[node name="Walldetectleft" type="Area2D" parent="."]
position = Vector2(-32, 0)
collision_layer = 2

[node name="Left" type="CollisionShape2D" parent="Walldetectleft"]
position = Vector2(-13, 0)
shape = SubResource("CircleShape2D_j3byl")

[node name="WallDetectRight" type="Area2D" parent="."]
position = Vector2(38, 0)
collision_layer = 2

[node name="Right" type="CollisionShape2D" parent="WallDetectRight"]
position = Vector2(11, -1)
shape = SubResource("CircleShape2D_j3byl")

[node name="Walljumptimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 2

[node name="magnetRad" type="CollisionShape2D" parent="Magnet"]
shape = SubResource("CircleShape2D_k4xi8")

[connection signal="body_entered" from="Walldetectleft" to="." method="_on_walldetectleft_body_entered"]
[connection signal="area_entered" from="WallDetectRight" to="." method="_on_wall_detect_right_area_entered"]
[connection signal="body_entered" from="WallDetectRight" to="." method="_on_wall_detect_right_body_entered"]
[connection signal="timeout" from="Walljumptimer" to="." method="_on_walljumptimer_timeout"]
